BUGFIX: SSF-168 fixing Webkit rendering issue that would display elements outside of an absolute positioned layout, breaking the layout in the reportadmin section. The fix is to hide to container that breaks the layout and use js to move the required elements out of the container when the CMS needs them.

--- a/admin/css/screen.css
+++ b/admin/css/screen.css
@@ -251,6 +251,8 @@ body.cms { overflow: hidden; }
 /** -------------------------------------------- Helpers -------------------------------------------- */
 .cms-helper-hide-actions .Actions { display: none; }
 
+.hide { display: none; }
+
 /** -------------------------------------------- Panels Styles -------------------------------------------- */
 .cms-container { height: 100%; background: #f0f3f4 url(../images/textures/bg_cms_main_content.png) repeat top left; }
 
