--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -60,6 +60,10 @@ body.cms {
 	}
 }
 
+.hide {
+	display: none;
+}
+
 /** --------------------------------------------
  * Panels Styles
  * -------------------------------------------- */
